llvm-toolchain-snapshot (1:13~++20210418105309+a0898f0cecc7-1~exp2) UNRELEASED; urgency=medium

  * Enable lld on s390x

  [ John Paul Adrian Glaubitz ]
  * Disable OpenMP on m68k


 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 28 Apr 2021 22:36:29 +0200

llvm-toolchain-snapshot (1:13~++20210418105309+a0898f0cecc7-1~exp1) experimental; urgency=medium

  [ Sylvestre Ledru ]
  * New snapshot release
  * "run-clang-tidy" install it
  * Only enable libomp-13-doc on supported archs
  * Verify that /proc is mounted. It makes some unexpected issues when
    building from a chroot without /proc
  * Fix the __config_site include issue
  * Revert D95727 for causing bug 49818

  [ John Paul Adrian Glaubitz ]
  * Add upstream patch D98574 to fix clang macro definitions on sparc64
  * Add upstream patch D98575 to fix 32-bit compiler-rt build on sparc64
  * Enable building the new experimental M68k backend
  * Set LLVM_HOST_TRIPLE to x86_64-linux-gnux32 on x32
  * Set LLVM_DEFAULT_TARGET_TRIPLE to x86_64-linux-gnux32 on x32

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 18 Apr 2021 11:00:31 +0200

llvm-toolchain-snapshot (1:13~++20210129063721+010b176cdefb-1~exp2) experimental; urgency=medium

  * Enable OpenMP offload capabilities for NVDIA GPUs
    See https://bugzilla.redhat.com/show_bug.cgi?id=1922914

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 01 Feb 2021 09:04:16 +0100

llvm-toolchain-snapshot (1:13~++20210129063721+010b176cdefb-1~exp1) experimental; urgency=medium

  [ Sylvestre Ledru ]
  * New branch (12 => 13)
  * Workaround a static_assert on https://bugs.llvm.org/show_bug.cgi?id=48259
    "static assertion failed: Recycler allocation size is less than object size!"
  * Also install usr/lib/llvm-12/bin/ld64.lld.darwinnew & usr/bin/ld64.lld.darwinnew-12
  * Also install usr/lib/llvm-12/lib/libomptarget.so.12 in libomp5-12

  [ Gianfranco Costamagna ]
  * Add upstream patch D92052 to fix a gcn offload compiler issue with gcc (Closes: #975692)
