@@ -1,2 +1,2 @@
 usr/lib/llvm-@LLVM_VERSION@/lib/libomp*.so.5
-usr/lib/llvm-@LLVM_VERSION@/lib/libomptarget.so.@LLVM_VERSION@
+
