@@ -1252,40 +1252,3 @@ libomp.so.5 libomp5-@LLVM_VERSION@ #MINVER#
  ompc_set_num_threads@VERSION 0.20130412
  ompc_set_schedule@VERSION 0.20130412
  (arch=!mips !mipsel !ppc64 !ppc64el !mips64 !mips64el !armel !armhf)ompt_start_tool@VERSION 6.0
-libomptarget.so.12 libomp5-12 #MINVER#
- VERS1.0@VERS1.0 12
- __kmpc_push_target_tripcount@VERS1.0 12
- __tgt_mapper_num_components@VERS1.0 12
- __tgt_push_mapper_component@VERS1.0 12
- __tgt_register_lib@VERS1.0 12
- __tgt_register_requires@VERS1.0 12
- __tgt_target@VERS1.0 12
- __tgt_target_data_begin@VERS1.0 12
- __tgt_target_data_begin_mapper@VERS1.0 12
- __tgt_target_data_begin_nowait@VERS1.0 12
- __tgt_target_data_begin_nowait_mapper@VERS1.0 12
- __tgt_target_data_end@VERS1.0 12
- __tgt_target_data_end_mapper@VERS1.0 12
- __tgt_target_data_end_nowait@VERS1.0 12
- __tgt_target_data_end_nowait_mapper@VERS1.0 12
- __tgt_target_data_update@VERS1.0 12
- __tgt_target_data_update_mapper@VERS1.0 12
- __tgt_target_data_update_nowait@VERS1.0 12
- __tgt_target_data_update_nowait_mapper@VERS1.0 12
- __tgt_target_mapper@VERS1.0 12
- __tgt_target_nowait@VERS1.0 12
- __tgt_target_nowait_mapper@VERS1.0 12
- __tgt_target_teams@VERS1.0 12
- __tgt_target_teams_mapper@VERS1.0 12
- __tgt_target_teams_nowait@VERS1.0 12
- __tgt_target_teams_nowait_mapper@VERS1.0 12
- __tgt_unregister_lib@VERS1.0 12
- omp_get_initial_device@VERS1.0 12
- omp_get_num_devices@VERS1.0 12
- omp_target_alloc@VERS1.0 12
- omp_target_associate_ptr@VERS1.0 12
- omp_target_disassociate_ptr@VERS1.0 12
- omp_target_free@VERS1.0 12
- omp_target_is_present@VERS1.0 12
- omp_target_memcpy@VERS1.0 12
- omp_target_memcpy_rect@VERS1.0 12
