@@ -1,12 +1,14 @@
 llvm-toolchain-snapshot (1:13~++20210418105309+a0898f0cecc7-1~exp2) UNRELEASED; urgency=medium
 
   * Enable lld on s390x
+  * remove libomptarget from openmp. done by upstream
+    in f2f88f3e7a110b2d4d9da446e45f0dba040e62b2
 
   [ John Paul Adrian Glaubitz ]
   * Disable OpenMP on m68k
 
 
- -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 28 Apr 2021 22:36:29 +0200
+ -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 08 May 2021 13:12:43 +0200
 
 llvm-toolchain-snapshot (1:13~++20210418105309+a0898f0cecc7-1~exp1) experimental; urgency=medium
 
